iptables-save
# Generated by iptables-save v1.4.21 on Wed Jan 16 15:58:22 2019
*nat
:PREROUTING ACCEPT [74:5501]
:INPUT ACCEPT [28:2185]
:OUTPUT ACCEPT [118:34732]
:POSTROUTING ACCEPT [11:976]
-A PREROUTING -i eth1 -p tcp -m tcp --dport 80 -j DNAT --to-destination 10.0.0.2:80
-A POSTROUTING -o eth1 -j MASQUERADE
COMMIT
# Completed on Wed Jan 16 15:58:22 2019
# Generated by iptables-save v1.4.21 on Wed Jan 16 15:58:22 2019
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [1:328]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -i eth3 -p udp -m udp --dport 53 -m state --state NEW -j ACCEPT
-A INPUT -i eth3 -p udp -m udp --sport 67:68 --dport 67:68 -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth3 -o eth2 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A FORWARD -i eth1 -o eth2 -p tcp -m tcp --dport 80 --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j ACCEPT
-A FORWARD -i eth3 -o eth2 -p tcp -m tcp --dport 22 -m state --state NEW -j ACCEPT
-A FORWARD -p udp -m udp --dport 53 -m state --state NEW -j ACCEPT
-A FORWARD -p udp -m udp --dport 53 -m state --state NEW -j ACCEPT
-A FORWARD -i eth3 -o eth1 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A FORWARD -i eth3 -o eth2 -p tcp -m tcp --dport 80 --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 80 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m tcp --dport 22 -m state --state NEW -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -m state --state NEW -j ACCEPT
-A OUTPUT -o eth3 -p udp -m udp --sport 67:68 --dport 67:68 -j ACCEPT
COMMIT
# Completed on Wed Jan 16 15:58:22 2019
